--- a/Notebooks/NoteBook.ipynb
+++ b/Notebooks/NoteBook.ipynb
@@ -1349,6 +1349,33 @@
    "source": [
     "target.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(feature, target, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature size: 11198, x_train size: 8954, x_test size: 2244\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'feature size: {feature.size}, x_train size: {x_train.size}, x_test size: {x_test.size}')"
+   ]
   }
  ],
  "metadata": {
